# zspotify

./: .gitignore  pyproject.toml  start.sh  zs_config.json
zspotify/: track.py
